--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "enum": "^3.0.4",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
