--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "enum": "^3.0.4",
     "vee-validate": "3.4.14",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
